--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cientifico</title>
+    <link type="text/css" href="styles.css" rel="stylesheet">
 </head>
 <body>
     <main class="Main">
         <header class="Header" id="header">
+        </header>            
             <section id="content">
                 <div class="loading"></div>
             </section>
-        </header>
+
 
     </main>
     
